# wordleish

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: main.cpp
